--- a/css/styles.css
+++ b/css/styles.css
@@ -1,32 +1,77 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap");
+@import "reset.css";
+@import "status-bar.css";
+@import "variables.css";
 
 body {
   font-family: "Open Sans", sans-serif;
 }
-.status-bar {
+
+.welcome-header {
+  margin-top: 90px;
+  text-align: center;
   display: flex;
-  justify-content: center;
-}
-
-.status-bar__column {
-  width: 33%;
-}
-
-.status-bar__column: first-child span {
-  margin-right: 5px;
-}
-
-.status-bar__column:nth-child(2) {
-  display: flex;
-  justify-content: center;
-}
-
-.status-bar__column:last-child {
-  display: flex;
-  justify-content: flex-end;
+  flex-direction: column;
   align-items: center;
 }
 
-.status-bar__column .fa-battery-full {
-  margin: 0px 5px;
+.welcome-header__title {
+  margin-bottom: 30px;
+  font-size: 25px;
 }
+
+.welcome-header__text {
+  width: 60%;
+  opacity: 0.7;
+  margin-bottom: 60px;
+}
+
+#login-form {
+  display: flex;
+  flex-direction: column;
+  margin: 0px 30px;
+}
+
+#login-form input {
+  border: none;
+  padding: 10px 0px;
+  font-size: 18px;
+  margin-bottom: 25px;
+}
+
+#login-form input:not([type="submit"]) {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  transition: border-color 0.3s ease-in-out;
+}
+
+#login-form input::placeholder {
+  color: rgba(0, 0, 0, 0.4);
+}
+
+#login-form input:focus {
+  border-color: var(--yellow);
+}
+
+#login-form input[type="submit"] {
+  background-color: var(--yellow);
+  cursor: progress;
+  padding: 20px 0px;
+  border-radius: 5px;
+}
+
+#login-form a {
+  text-align: center;
+  text-decoration: none;
+  color: inherit;
+  font-size: 13px;
+}
+
+/*
+  CSS파일도 여러 CSS파일을 저렇게 모아놓고 모아놓는 형태로 하면 더 깔끔
+
+  6.7
+  default color는 black이다. 
+  따라서 color: inherit는 parent color인 black을 받겠다는 의미다.
+
+
+*/
